[package]
name = "brainfuck-interpreter"
version = "0.1.0"
edition = "2018"

[features]
default = ["impls"]
impls = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.number_prefix]
version = "0.4"

[[example]]
name = "hello-world"
default-features = true
